node/plain/kubernetes/Application/manifests/deployment (1).yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: anchauhtestaks
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: anchauhtestaks
    spec:
      containers:
        - name: anchauhtestaks
          image: tedeshpaacr1.azurecr.io/anchauhtestaks
          ports:
          - containerPort: 80
