node/plain/kubernetes/Application/manifests/service (1).yml
apiVersion: v1
kind: Service
metadata:
    name: anchauhtestaks
    labels:
        app: anchauhtestaks
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: anchauhtestaks
