node/plain/kubernetes/Application/manifests/ingress (1).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: anchauhtestaks
    labels:
        app: anchauhtestaks
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: anchauhtestaks941a-anchauhtestaks.9e6e1f9f22e7470f8a0b.southcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: anchauhtestaks
                servicePort: 80
